# soilMuseReflectance

./: .gitignore  README.md  Soil_refelectance_signatures_fast_plot.py  pyproject.toml  requirements.txt
notebook/: 241119_demo.ipynb
src/srmouse/: imageTools.py  mouse_app.py  muse_app.py  processor.py  viz.py
src/srmouse/cmd/: Soil_refelectance_signatures_fast_plot.py
src/srmouse/ui/: muse_ui.py
src/tests/: test_muse_ui.py  test_processor.py
