[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "srmouse"
version = "0.0.1"
description = "Processing tool for the images captured with the Mouse Camera - Soil sample application"

authors = [
  {name = "Juan Pablo Rojas Bustos", email = "jrojas9206@gmail.com"},
]
maintainers = [
  {name = "Juan Pablo Rojas Bustos", email = "jrojas9206@gmail.com"}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["Multispectral Image", "Muse", "Imagery", "Soil", "Reflectance", "Measurements"]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Soil professional",
  "Topic :: Software Development :: Computer Vision",

  # Pick your license as you wish (see also "license" above)
  "License :: GNU",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.9",
]

[tool.setuptools.dynamic]
dependencies = {file = ["./requirements.txt"]} 